--- a/app/views/countries/index.html.haml
+++ b/app/views/countries/index.html.haml
@@ -5,5 +5,5 @@
     .list-group
       - @countries.each do |country|
         = link_to country_path(country), class: 'list-group-item' do
-          %h4.list-group-item-heading  #{ country.code } - #{ country.name }
+          %h4.list-group-item-heading #{ country.name } [ #{ country.code } ]
           %p.list-group-item-text Available #{ country.currencies.count } #{ 'currency'.pluralize(country.currencies.count) }
