--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -35,4 +35,7 @@
       = link_to 'Trips', trips_path
   %ul.nav.navbar-nav.navbar-right
     %li
-      %a{:href => 'login'} Login
+      - if user_signed_in?
+        = link_to('Logout', destroy_user_session_path, method: :delete)
+      - else
+        = link_to('Login', new_user_session_path)
