--- a/app/views/trips/show.html.haml
+++ b/app/views/trips/show.html.haml
@@ -1,9 +1,10 @@
 .row
   .col-xs-12
-    = button_to 'Delete', trip_path(@trip), class: 'btn btn-danger btn-delete', type: :button, method: :delete
-    - unless @trip.finished?
-      = button_to 'Finish', finish_trip_path(@trip), class: 'btn btn-primary btn-finish', type: :button, method: :put
-      = button_to 'Edit', edit_trip_path(@trip), class: 'btn btn-warning btn-edit', type: :button, method: :get
+    - if user_signed_in?
+      = button_to 'Delete', trip_path(@trip), class: 'btn btn-danger btn-delete', type: :button, method: :delete
+      - unless @trip.finished?
+        = button_to 'Finish', finish_trip_path(@trip), class: 'btn btn-primary btn-finish', type: :button, method: :put
+        = button_to 'Edit', edit_trip_path(@trip), class: 'btn btn-warning btn-edit', type: :button, method: :get
     %h1 Show trip (#{ @trip.created_at.strftime('%F') } - #{ @trip.end_date.strftime('%F') })
 
     .list-group
